cabal-version:       2.2
name:                cautious-sniffle
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENCE
author:              Sean Chalmers
maintainer:          sclhiannan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Protocol.Webdriver.ClientAPI
                     , Protocol.Webdriver.ClientAPI.SessionAPI
                     , Protocol.Webdriver.ClientAPI.Types
                     , Protocol.Webdriver.ClientAPI.Types.Session
                     , Protocol.Webdriver.ClientAPI.Types.Timeout
                     , Protocol.Webdriver.ClientAPI.Types.Error
                     , Protocol.Webdriver.ClientAPI.Types.LocationStrategy 
                     , Protocol.Webdriver.ClientAPI.Types.ElementId
                     , Protocol.Webdriver.ClientAPI.Types.Internal
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Chrome
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Firefox
                     , Protocol.Webdriver.ClientAPI.Types.LogSettings
                     , Protocol.Webdriver.ClientAPI.Types.ProxySettings

  build-depends:       base >=4.11 && <4.13
                     , text
                     , waargonaut >= 0.6 && < 0.8
                     , servant-waargonaut
                     , semigroupoids
                     , natural
                     , lens
                     , mtl
                     , text
                     , bytestring
                     , containers
                     , vector
                     , http-client
                     , scientific
                     , servant
                     , servant-client >= 0.14
                     , servant-client-core >= 0.14
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , contravariant
                     , base64-bytestring
                     , clay
                     , modern-uri
                     , generics-sop
                     , bifunctors
                     , errors
                     , time

  hs-source-dirs:      lib
  ghc-options:         -Wall

  default-language:    Haskell2010

library generate-wd-hs
  exposed-modules:     Hedgehog.WebDriver
                     , Protocol.Webdriver.Types
                     , Protocol.Webdriver.HaskGen

                     , Protocol.Webdriver.Decoders

                     , Protocol.Webdriver.Generate.Hask
                     , Protocol.Webdriver.Generate.Streengs
                     , Protocol.Webdriver.Generate.Internal
                     , Protocol.Webdriver.Generate

  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.13
                     , cautious-sniffle
                     , hedgehog
                     , text
                     , waargonaut >= 0.6 && < 0.8
                     , natural
                     , lens
                     , mtl
                     , text
                     , bytestring
                     , attoparsec
                     , containers
                     , distributive
                     , haskell-src-exts
                     , template-haskell >= 2.13
                     , pretty

  hs-source-dirs:      gen-wd-hs
  ghc-options:         -Wall

  default-language:    Haskell2010

executable gen-hs
  default-language:    Haskell2010
  hs-source-dirs:      exe

  main-is:             Main.hs

  build-depends:       base >=4.11 && <4.13
                     , cautious-sniffle
                     , generate-wd-hs
                     , text
                     , lens
                     , bytestring
                     , waargonaut >= 0.6 && < 0.8
                     , directory >= 1.3

  ghc-options:         -Wall

test-suite wd-tests
  other-modules:       General.Types
                     , General.ManageDriver
                     , General.TestOpts
                     , General.TestAPI
                     , General.Webserver
                     , General.UnitTests

                     , Commands

  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.13
                     , cautious-sniffle
                     , exceptions
                     , tasty
                     , mtl
                     , tasty-hunit
                     , tasty-hedgehog
                     , hedgehog
                     , cautious-sniffle
                     , lens
                     , text >= 1.2
                     , containers >= 0.5
                     , http-client
                     , servant
                     , servant-client
                     , servant-client-core >= 0.14
                     , waargonaut >= 0.6 && < 0.8
                     , vector
                     , dependent-map
                     , dependent-sum
                     , clay
                     , modern-uri
                     , warp
                     , scotty
                     , process

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  ghc-options:         -Wall -O2

  default-language:    Haskell2010

-- test-suite example
--   main-is:             Example.hs
--   build-depends:       base >=4.11 && <4.12
--                      , cautious-sniffle
--                      , hedgehog
--                      , lens
--                      , text >= 1.2
--                      , containers >= 0.5
--                      , http-client
--                      , servant
--                      , servant-client
--                      , waargonaut >= 0.6 && < 0.7
--                      , vector
--                      , dependent-map
--                      , dependent-sum
--                      , clay
--                      , modern-uri

--   type:                exitcode-stdio-1.0

--   hs-source-dirs:      test
--   ghc-options:         -Wall -O2

--   default-language:    Haskell2010
