cabal-version:       2.2
name:                cautious-sniffle
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENCE
author:              Sean Chalmers
maintainer:          sclhiannan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common base-deps
  build-depends:
    base64-bytestring       >= 1.0.0 && < 1.1,
    bytestring              >= 0.10.8 && < 0.11,
    bifunctors              >= 5.5.4 && < 5.6,
    containers              >= 0.6.0 && < 0.7,
    clay                    >= 0.13.1 && < 0.14,
    mtl                     >= 2.2.2 && < 2.3,
    text                    >= 1.2.3 && < 1.3,
    contravariant           >= 1.5.2 && < 1.6,
    dependent-map           >= 0.2.5 && < 0.3,
    dependent-sum           >= 0.5 && < 0.6,
    dependent-sum-template  >= 0.0.0 && < 0.1,
    errors                  >= 2.3.0 && < 2.4,
    generics-sop            >= 0.4.0 && < 0.5,
    http-client             >= 0.5.14 && < 0.6,
    time                    >= 1.8.0 && < 1.9,
    lens                    >= 4.17.1 && < 4.18,
    semigroupoids           >= 5.3.2 && < 5.4,
    vector                  >= 0.12.0 && < 0.13,
    modern-uri              >= 0.3.0 && < 0.4,
    scientific              >= 0.3.6 && < 0.4,
    natural                 >= 0.3.0 && < 0.4,
    servant                 >= 0.15 && < 0.16,
    servant-client          >= 0.15 && < 0.16,
    servant-client-core     >= 0.15 && < 0.16,
    servant-waargonaut      >= 0.6.0 && < 0.7,
    waargonaut              >= 0.6 && < 0.8

library
  import: base-deps
  exposed-modules:     Protocol.Webdriver.ClientAPI
                     , Protocol.Webdriver.ClientAPI.SessionAPI
                     , Protocol.Webdriver.ClientAPI.Types
                     , Protocol.Webdriver.ClientAPI.Types.Session
                     , Protocol.Webdriver.ClientAPI.Types.Timeout
                     , Protocol.Webdriver.ClientAPI.Types.Error
                     , Protocol.Webdriver.ClientAPI.Types.WDUri
                     , Protocol.Webdriver.ClientAPI.Types.Cookies
                     , Protocol.Webdriver.ClientAPI.Types.LocationStrategy 
                     , Protocol.Webdriver.ClientAPI.Types.ElementId
                     , Protocol.Webdriver.ClientAPI.Types.Internal
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Chrome
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Firefox
                     , Protocol.Webdriver.ClientAPI.Types.LogSettings
                     , Protocol.Webdriver.ClientAPI.Types.ProxySettings

  build-depends:       base >=4.11 && <4.13

  hs-source-dirs:      lib
  ghc-options:         -Wall

  default-language:    Haskell2010

test-suite wd-tests
  import:              base-deps
  other-modules:       General.Types
                     , General.ManageDriver
                     , General.TestOpts
                     , General.TestAPI
                     , General.Webserver
                     , General.UnitTests

                     , Commands

  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.13

                     , cautious-sniffle
                     , tasty >= 1.2
                     , tasty-hunit >= 0.9 && < 0.11
                     , tasty-hedgehog >= 1.0 && < 1.2
                     , hedgehog >= 1.0 && < 1.2
                     , warp >= 3.2 && < 4
                     , scotty >= 0.10 && < 0.13
                     , process >= 1.6 && < 1.8
                     , exceptions >= 0.10

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  ghc-options:         -Wall -O2

  default-language:    Haskell2010

test-suite example
  main-is:             Example.hs
  build-depends:       base >=4.11 && <4.13
                     , cautious-sniffle
                     , waargonaut >= 0.6 && < 0.8
                     , text >= 1.2.3 && < 1.3
                     , http-client >= 0.5.14 && < 0.6
                     , servant-client >= 0.15 && < 0.16
                     , servant-client-core >= 0.15 && < 0.16
                     , clay >= 0.13.1 && < 0.14
                     , modern-uri >= 0.3.0 && < 0.4

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  ghc-options:         -Wall -O2

  default-language:    Haskell2010
