cabal-version:       2.2

name:                cautious-sniffle

version:             0.1.0.0

synopsis:            Servant client bindings for W3C Webdriver Protocol

description:         The W3C is standardising on a protocol for webdriver
                     automated testing tools. This package provides a servant-client based
                     implementation. This package is intended to be a faithful
                     implementation of these protocols, with types and data structures
                     provided to impose a base level of compliance.

license:             BSD-3-Clause
license-file:        LICENCE
author:              Sean Chalmers
maintainer:          oᴉ˙ldɟb@uɐǝs
copyright:           Copyright (C) 2018 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Testing, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , test/doctest-config.json

tested-with:         GHC==8.4.4
                   , GHC==8.6.4

homepage:            https://github.com/mankyKitty/cautious-sniffle
bug-reports:         https://github.com/mankyKitty/cautious-sniffle/issues

source-repository    head
  type:              git
  location:          git@github.com/mankyKitty/cautious-sniffle.git

common base { build-depends: base >=4.11 && <4.15 }
                       
common base-deps
  build-depends:
    base64-bytestring       >= 1.0.0 && < 1.1,
    bytestring              >= 0.10.8 && < 0.11,
    bifunctors              >= 5.5.4 && < 5.6,
    containers              >= 0.6.0 && < 0.7,
    linear                  >= 1.20.9 && < 1.21,
    clay                    >= 0.13.1 && < 0.14,
    mtl                     >= 2.2.2 && < 2.3,
    text                    >= 1.2.3 && < 1.3,
    contravariant           >= 1.5.2 && < 1.6,
    dependent-map           >= 0.2.5 && < 0.4,
    dependent-sum           >= 0.5 && < 0.7,
    dependent-sum-template  >= 0.0.0.1 && < 0.2,
    errors                  >= 2.3.0 && < 2.4,
    generics-sop            >= 0.4.0 && < 0.6,
    http-client             >= 0.5.14 && < 0.7,
    time                    >= 1.8.0 && < 1.10,
    lens                    >= 4.17.1 && < 4.18,
    semigroupoids           >= 5.3.2 && < 5.4,
    vector                  >= 0.12.0 && < 0.13,
    modern-uri              >= 0.3.0 && < 0.4,
    scientific              >= 0.3.6 && < 0.4,
    natural                 >= 0.3.0 && < 0.4,
    servant                 >= 0.15 && < 0.17,
    servant-client          >= 0.15 && < 0.17,
    servant-client-core     >= 0.15 && < 0.17,
    servant-waargonaut      >= 0.6.0 && < 0.7,
    waargonaut              >= 0.6 && < 0.8

library
  import: base
        , base-deps

  exposed-modules:     Protocol.Webdriver.ClientAPI
                     , Protocol.Webdriver.ClientAPI.SessionAPI
                     , Protocol.Webdriver.ClientAPI.Types
                     , Protocol.Webdriver.ClientAPI.Types.Session
                     , Protocol.Webdriver.ClientAPI.Types.Timeout
                     , Protocol.Webdriver.ClientAPI.Types.Error
                     , Protocol.Webdriver.ClientAPI.Types.WDUri
                     , Protocol.Webdriver.ClientAPI.Types.Cookies
                     , Protocol.Webdriver.ClientAPI.Types.LocationStrategy 
                     , Protocol.Webdriver.ClientAPI.Types.ElementId
                     , Protocol.Webdriver.ClientAPI.Types.Internal
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Chrome
                     , Protocol.Webdriver.ClientAPI.Types.Capabilities.Firefox
                     , Protocol.Webdriver.ClientAPI.Types.LogSettings
                     , Protocol.Webdriver.ClientAPI.Types.ProxySettings
                     , Protocol.Webdriver.ClientAPI.Types.Keys
                     , Protocol.Webdriver.ClientAPI.Types.Actions

                     , Servant.API.Client.HollowBody

  hs-source-dirs:      lib
  ghc-options:         -Wall

  default-language:    Haskell2010

test-suite wd-tests
  import:              base
                     , base-deps

  build-depends:       cautious-sniffle
                     , tasty >= 1.2
                     , tasty-hunit >= 0.9 && < 0.11
                     , tasty-hedgehog >= 1.0 && < 1.2
                     , hedgehog >= 1.0 && < 1.2
                     , warp >= 3.2 && < 4
                     , scotty >= 0.10 && < 0.13
                     , process >= 1.6 && < 1.8
                     , exceptions >= 0.10

  other-modules:       General.Types
                     , General.ManageDriver
                     , General.TestOpts
                     , General.TestAPI
                     , General.Webserver
                     , General.UnitTests
                     , Commands
                     , Example

  main-is:             Main.hs

  type:                exitcode-stdio-1.0

  hs-source-dirs:      test
  ghc-options:         -Wall

  default-language:    Haskell2010

test-suite doctests
  import:              base

  build-depends:       doctest
                     , doctest-discover

  type:                exitcode-stdio-1.0
  main-is:             Doctests.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  default-language:    Haskell2010

-- test-suite example
--   import:              base

--   build-depends:       cautious-sniffle
--                      , tasty-hunit
--                      , tasty
--                      , exceptions
--                      , servant
--                      , waargonaut >= 0.6 && < 0.8
--                      , text >= 1.2.3 && < 1.3
--                      , http-client >= 0.5.14 && < 0.7
--                      , servant-client >= 0.15 && < 0.17
--                      , servant-client-core >= 0.15 && < 0.17
--                      , clay >= 0.13.1 && < 0.14
--                      , modern-uri >= 0.3.0 && < 0.4

--   main-is:             Example.hs

--   type:                exitcode-stdio-1.0

--   hs-source-dirs:      test
--   ghc-options:         -Wall

--   default-language:    Haskell2010
